# cplusplus-playground

./: .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json
my-cpp-project/: CMakeLists.txt  README.md
my-cpp-project/include/: MyClass.h
my-cpp-project/src/: MyClass.cpp  main.cpp  main_gui.cpp
my-cpp-project/tests/: CMakeLists.txt  GoogleTest-CMakeLists.txt.in  test_MyClass.cpp
